--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
     
   <h1 class="postTitle">{{ page.blog_title }}</h1>
   <div>
-      <img class="bigPostImage" src="{{ image }}" alt="Picture">
+      <img class="bigPostImage" src="{{ post.image }}" alt="Picture">
     </div>
 </div>  
 
