--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -92,20 +92,20 @@
         <h3>Read More</h3>
       </div>
     {% if page.previous.url %}
-      <a class="prevBlog" href="{{page.previous.url}}">
+      <a class="prevBlog" href="{{site.baseurl}}{{page.previous.url}}">
       <div class="whiteBox smallBlog">
               <h4>&laquo; Read Previous Blog</h4>
-              <img  class="postImg" src="{{ page.previous.image }}" alt="beijing">
+              <img  class="postImg" src="{{site.baseurl}}{{ page.previous.one_path }}" alt="beijing">
               <div class="smallBlogText">{{ page.previous.blog_title }}
               <span class="postDate">{{ page.previous.url | date: "%b %-d, %Y" }} </span></div>
       </div>
       </a>
     {% endif %}
     {% if page.next.url %}
-      <a class="nextBlog" href="{{page.next.url}}">
+      <a class="nextBlog" href="{{site.baseurl}}{{page.next.url}}">
       <div class="whiteBox smallBlog">
               <h4>Read Next Blog &raquo;</h4>
-              <img  class="postImg" src="{{ page.next.image }}" alt="beijing">
+              <img  class="postImg" src="{{site.baseurl}}{{ page.next.one_path }}" alt="beijing">
               <div class="smallBlogText">{{ page.next.blog_title }}
               <span class="postDate">{{ page.next.url | date: "%b %-d, %Y" }} </span></div>
       </div>
