--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -143,7 +143,7 @@
     {% for post in site.posts %}
     <div class="whiteBox smallBlog">
         <a  href="{{ post.url | relative_url }}">
-            <img  class="postImg" src="{{ post.image }}" alt="beijing">
+            <img  class="postImg" src="{{ post.one_path }}" alt="{{post.title_description}}">
             <div class="smallBlogText">{{ post.blog_title }}
             <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
         </a>
