--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@
     <div>
         <!-- Nav bar with social medias -->
         <div class="navBar"> 
+          <a href="{{baseurl}}" class="home" >{% include icons/facebook.html %}</a>      
           <a href="https://www.facebook.com/mali.princ2" target="_blank" class="socMed" >{% include icons/facebook.html %}</a>
           <a href="https://www.instagram.com/marljiva_marta/" target="_blank" class="socMed" >{% include icons/insta.html %}</a>
           <a href="https://twitter.com/Marta_Guth" target="_blank" class="socMed" >{% include icons/twitter.html %}</a>
