--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -11,7 +11,8 @@ layout: page
 <div class="postHeading">
     <div>
         <!-- Nav bar with social medias -->
-        <div class="navBar"> 
+        <div class="navBar">
+            <a href="#" class="home" >{% include icons/facebook.html %}</a>
             <a href="#" class="socMed" >{% include icons/facebook.html %}</a>
             <a href="#" class="socMed" >{% include icons/insta.html %}</a>
             <a href="#" class="socMed" >{% include icons/twitter.html %}</a>
