--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -2,3 +2,5 @@
         <title>home</title>
         <path d="M32 18.451l-16-12.42-16 12.42v-5.064l16-12.42 16 12.42zM28 18v12h-8v-8h-8v8h-8v-12l12-9z"></path>
         </symbol>
+
+        <svg class="icon icon-home"><use xlink:href="#icon-home"></use></svg>
