--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -6,3 +6,15 @@
     </symbol>
     </defs>
     </svg>
+    <svg class="icon icon-home"><use xlink:href="#icon-home"></use></svg>
+
+    <style>
+    .icon {
+        display: inline-block;
+        width: 2vw;
+        height: 2vw;
+        stroke-width: 0;
+        stroke: currentColor;
+        fill: currentColor;
+      }
+    </style>
