--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -15,6 +15,6 @@
         height: 2vw;
         stroke-width: 0;
         stroke: currentColor;
-        fill: currentColor;
+        fill: black;
       }
     </style>
