--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -126,8 +126,8 @@
             {% for post in site.categories[pageCategory] limit:6 %}
               {% unless post.title == page.title %}
               <div class="whiteBox smallBlog">
-                  <a  href="{{ post.url }}">
-                      <img  class="postImg" src="{{ post.image }}" alt="beijing">
+                  <a  href="{{site.baseurl}}{{ post.url }}">
+                      <img  class="postImg" src="{{ post.one_path }}" alt="beijing">
                       <div class="smallBlogText">{{ post.blog_title }}
                       <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
                   </a>
