--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -10,7 +10,7 @@ const hitTemplate = function(hit) {
   if (hit.date) {
     date = moment.unix(hit.date).format('MMM D, YYYY');
   }
-  let url = `{{ site.baseurl }}${hit.url}#${hit.anchor}`;
+  let url = `${hit.url}#${hit.anchor}`;
   const title = `{{ site.baseurl }}${hit.blog_title}`
   const image = `{{ site.baseurl }}${hit.one_path}`;
   let breadcrumbs = '';
