--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -40,7 +40,7 @@
             { "id": "PL" },
             { "id": "RO" },
             { "id": "RU",
-            "url": "/category/china.html",
+            "url": "{{site.baseurl}}/category/china.html",
     "urlTarget": "_blank"
         },
             { "id": "RS" },
@@ -83,7 +83,7 @@
      {% for post in site.posts limit 4 %}
         <div class="blogEntry">       
             <div class='blogTitle'>
-                <a href="{{site.baseurl}}{{post.url}}" class="blogLink"><h4 class="tithead">{{ post.name }}</h4></a>
+                <a href="{{site.baseurl}}{{post.category}}" class="blogLink"><h4 class="tithead">{{ post.name }}</h4></a>
                 <h5 class='titleDesc'>{{ title_description }} <span class='light'>{{ post.url | date: "%b %-d, %Y" }}</span> </h5>
             </div>
             <div>
