--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -12,7 +12,7 @@ layout: page
     <div>
         <!-- Nav bar with social medias -->
         <div class="navBar">
-            <a href="#" class="home" >{% include icons/facebook.html %}</a>
+            <a href="#" class="home socMed" >{% include icons/home.html %}</a>
             <a href="#" class="socMed" >{% include icons/facebook.html %}</a>
             <a href="#" class="socMed" >{% include icons/insta.html %}</a>
             <a href="#" class="socMed" >{% include icons/twitter.html %}</a>
