--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -169,6 +169,9 @@
   </div>
   <div class="whiteBox tagBox">
         {% for category in site.categories %}
+        {% for post in category[1] %}
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endfor %}
         <span><a href="{{ post.url | prepend: site.baseurl }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
   </div>
