--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -169,7 +169,7 @@
   </div>
   <div class="whiteBox tagBox">
         {% for category in site.categories %}
-        <span><a href="{{category.url}}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="{{site.baseurl}}/category/china.html" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
   </div>
 </div>
