--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,7 @@
 
+.body{
+    background-color: whitesmoke;
+}
 .navBar {
     background: #565e6c; 
     padding: 2%;
@@ -60,7 +63,7 @@
         padding: 1%;
             font-size: 6vw; 
             font-weight: 1000;
-            color: #f6dba4;
+            color: white;
             margin: 0;
         }
 .subscribebutt {
