--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -59,12 +59,13 @@
         }
     .title{
         z-index: 100;
-        text-shadow: 4px 2px 5px #565e6c;
+        //text-shadow: 4px 2px 5px #565e6c;
         padding: 1%;
             font-size: 6vw; 
             font-weight: 1000;
             color: white;
             margin: 0;
+            text-align: center; 
         }
 .subscribebutt {
     background-color: #f6dba4;
