--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -127,7 +127,7 @@
               {% unless post.title == page.title %}
               <div class="whiteBox smallBlog">
                   <a  href="{{site.baseurl}}{{ post.url }}">
-                      <img  class="postImg" src="{{ post.one_path }}" alt="beijing">
+                      <img  class="postImg" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
                       <div class="smallBlogText">{{ post.blog_title }}
                       <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
                   </a>
