--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -16,7 +16,7 @@ body{
     display: inline-block;   
     }
 .socMed:hover {
-    background-color: white;
+    background-color: #f6f5f3;
     }
 .mainrow {
         display: block;
@@ -62,8 +62,7 @@ body{
         //text-shadow: 4px 2px 5px #565e6c;
         padding: 1%;
             font-size: 6vw; 
-            font-weight: 1000;
-            color: white;
+            color:#f6f5f3;
             margin: 0;
             text-align: center; 
         }
