--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -230,8 +230,10 @@ label {
    
     
    }
+   /*
    @media (max-width: 321px){
     .bigger, .smaller {   
         flex-direction: column;
     }
    }
+   */
