--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -184,7 +184,7 @@ a {
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media (max-width: 700px) {
     .bigger, .smaller {   
-        flex-direction: column;
+      //  flex-direction: column;
     }
     #mapdiv{
         max-width: 500px;
@@ -193,7 +193,7 @@ a {
 }
 @media (max-width: 500px){
     .bigger, .smaller {   
-        flex-direction: column;
+      //  flex-direction: column;
     }
     #mapdiv{
         max-width: 300px;
@@ -213,7 +213,7 @@ label {
 
 @media (max-width: 768px) {
     .bigger, .smaller {   
-        flex-direction: column;
+       // flex-direction: column;
     }
     .bigger {
         padding-right: 0;
