--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -25,7 +25,7 @@ body{
         }
 .main {
     font-family: 'Oswald', sans-serif;
-    font-size: 5vw;
+    //font-size: 5vw;
     font-weight: bold; 
     text-align: center; 
     color: #565e6c; 
@@ -33,7 +33,7 @@ body{
     }
 .underMain {
     font-family: 'Oswald', sans-serif;
-    font-size: 3vw;
+    //font-size: 3vw;
     font-weight: bold; 
     text-align: center; 
     color: #565e6c; 
