--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -5,7 +5,7 @@ body {font-family: Verdana, sans-serif; margin:0}
   float: left;
 }
 
-.grey{
+.greyPost{
   background:#565e6c;
   padding: 1%;
   display:block;
