--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
 {{ content }}
 </div>
 
-<div class="grey">
+<div class="greyPost">
   <h2>Gallery</h2>
 </div>
 
@@ -78,7 +78,7 @@
 <div class="flex-container">
 
     <div class="comments" style="padding-right: 2%">
-        <div class="grey">
+        <div class="greyPost">
           <h3>Comments</h3>
         </div>
         
@@ -89,7 +89,7 @@
 
 
 <div class="pageNavigation">
-    <div class="grey" style="padding-left: 2%">
+    <div class="greyPost" style="padding-left: 2%">
         <h3>Read More</h3>
       </div>
     {% if page.previous.url %}
@@ -119,7 +119,7 @@
       {% capture pageCategory %}{{ page.category }}{% endcapture %}
       {% unless site.categories[pageCategory].size == 1 %}
         <div>
-            <div class="grey" style="padding-left: 2%">
+            <div class="greyPost" style="padding-left: 2%">
                 <h3>Read More about {{ page.category }} </h3>
             </div>
           <div>
