--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -51,7 +51,7 @@
    font-family: 'Oswald', sans-serif;
 }
 .tithead {
-   font-size: 2vw;
+   //font-size: 2vw;
    font-family: 'Oswald', sans-serif;
 }
 .titleDesc {
