--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -105,6 +105,8 @@
    background-color: #565e6c;
    margin: 0px;
    color: white;
+   padding: 1%;
+   text-align: center;
 }
 .whiteBox{
    padding: 15px;
