--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -105,7 +105,7 @@
    background-color: #565e6c;
    margin: 0px;
    color: white;
-   padding: 1%;
+   padding: 10px;
    text-align: center;
 }
 .whiteBox{
