--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -71,9 +71,7 @@
 
  <!-- Grid system -->
  <div class="bigger">
-     <div class="grey" id="readBlogs">
-         <h2>Read Blogs</h2>
-     </div>
+         <h2  class="grey">Read Blogs</h2>
      
       <!-- two columns -->
     <div class="blogEntries">
