--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,4 +31,10 @@
 	 
 </div>
 
+<script>
+        if (window.innerWidth < 700) {
+        var image = document.getElementsByClassName("image");
+        image.src = "img/ImageHeader.jpg";
+    }
+    </script>
 
