--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -16,4 +16,11 @@
         stroke: currentColor;
         fill: black;
       }
+     @media (max-width: 768px) {
+        svg {
+            width: 5vw;
+            height: 5vw;
+        }
+        
+    }
     </style>
