--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -81,7 +81,7 @@
      {% for post in site.posts limit 4 %}
         <div class="blogEntry">       
             <div class='blogTitle'>
-                <a href="{{site.baseurl}}{{category}}" class="blogLink"><h3 class="tithead">{{ post.name }}</h3></a>
+                <a href="{{site.baseurl}}{{post.url}}" class="blogLink"><h3 class="tithead">{{ post.name }}</h3></a>
                 <h4 class='titleDesc'>{{ title_description }} <span class='light'>{{ post.url | date: "%b %-d, %Y" }}</span> </h4>
             </div>
             <div>
