--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
          </div>
          <!-- Big Image Header -->
          <div class="imgContainer">
-             <img src="img/ImageHeader2.jpg" class="image"  alt="imageHeader"/>
+             <img src="img/ImageHeader2.jpg" class="image" id="image" alt="imageHeader"/>
              <div class="imgText">
                    <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
                    <span><button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button></span>
@@ -33,7 +33,7 @@
 
 <script>
         if (window.innerWidth < 700) {
-        var image = document.getElementsByClassName("image");
+        var image = document.getElementById("image");
         image.src = "img/ImageHeader.jpg";
     }
     </script>
