--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -15,6 +15,8 @@
         stroke-width: 0;
         stroke: currentColor;
         fill: black;
+        width: 2vw;
+        height: 2vw;
       }
      @media (max-width: 768px) {
         svg {
