--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
 <script>
         if (window.innerWidth < 700) {
         var image = document.getElementById("image");
-        image.src = "img/ImageHeader.jpg";
+        image.src = "img/imageHeader.jpg";
     }
     </script>
 
