--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -1,4 +1,4 @@
-<svg style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg style="position: absolute; width="2vw" height="2vw" overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
     <symbol id="icon-home" viewBox="0 0 1024 1024">
         <title>home</title>
@@ -8,21 +8,3 @@
     </svg>
     
     <svg class="icon icon-home"><use xlink:href="#icon-home"></use></svg>
-
-    <style>
-    .icon {
-        display: inline-block;
-        stroke-width: 0;
-        stroke: currentColor;
-        fill: black;
-        width: 2vw;
-        height: 2vw;
-      }
-     @media (max-width: 768px) {
-        svg {
-            width: 5vw;
-            height: 5vw;
-        }
-        
-    }
-    </style>
