--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@
       <a class="previous" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-      <div class="dots">
+      <div class="dots" id="dots">
           {% for image in page.images limit:5 %}
           <span class="dot"  onclick="currentSlide({{image.image_number}})"></span>
           {% endfor %}
@@ -146,6 +146,13 @@
 
 {% include footer.html %}
 <script>
+
+ 
+ if (window.innerWidth < 700) {
+    var dots = document.getElementById("dots");
+    dots.display = "none";
+}
+
 
 
   // slide index is the position of the picture in the array of pictures
