--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -222,6 +222,9 @@ body {font-family: Verdana, sans-serif; margin:0}
   .right{
     padding-top: 10px;
   }
+  .sidePic {
+    height: 100px;
+  }
 }
 
 
@@ -237,6 +240,9 @@ body {font-family: Verdana, sans-serif; margin:0}
     max-width: 400px;
     max-height: 350px;
 
+}
+.sidePic {
+  height: 70px;
 }
 }
 .pageNavigation{
