--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -9,4 +9,16 @@
     
     <svg class="icon icon-home"><use xlink:href="#icon-home"></use></svg>
 
-  
+    <style>
+    .icon-home {
+        display: inline-block;
+        stroke-width: 0;
+        stroke: currentColor;
+        fill: black;
+        width: 2vw;
+        height: 2vw;
+      }
+    
+        
+    }
+    </style>
