--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -150,7 +150,7 @@
  
  if (window.innerWidth < 700) {
     var dots = document.getElementById("dots");
-    dots.display = "none";
+    dots.style.display = "none";
 }
 
 
