--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,7 +65,7 @@
     <div class="oneRow">
         {% for image in page.images %}
         <div class="columnPic cursor">
-          <img class="sidePic" onclick="currentSlide({{image.image_number}})" src="{{site.baseurl}}{{image.image_path}}" style="height:200px" alt="Jinin">
+          <img class="sidePic" onclick="currentSlide({{image.image_number}})" src="{{site.baseurl}}{{image.image_path}}"  alt="Jinin">
          </div>
         {% endfor %}
       
