--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -205,6 +205,7 @@ body {font-family: Verdana, sans-serif; margin:0}
 .sidePic{
   opacity: 0.4;
   max-width: 100%;
+  height: 200px;
 }
 .sidePic:hover, .active{
   opacity: 1;
@@ -237,8 +238,8 @@ body {font-family: Verdana, sans-serif; margin:0}
     flex-direction: column;
   }
   .oneImage{
-    max-width: 400px;
-    max-height: 350px;
+    max-width: 350px;
+    max-height: 300px;
 
 }
 .sidePic {
