--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -116,11 +116,11 @@
 
   <div class="readMoreCategory">
       {% unless page.category == null %}
-      {% capture pageCategory %}{{ page.category | strip}}{% endcapture %}
+      {% capture pageCategory %}{{ page.category }}{% endcapture %}
       {% unless site.categories[pageCategory].size == 1 %}
         <div>
             <div class="greyPost" style="padding-left: 2%">
-                <h3>Read More about {{ page.category }} </h3>
+                <h3>Read More about {{ page.category | split:&nbsp; }} </h3>
             </div>
           <div>
             {% for post in site.categories[pageCategory] limit:6 %}
