--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,7 +4,7 @@ body{
 }
 .navBar {
     background: #565e6c; 
-    padding: 20px;
+    padding: 2%;
     margin: 0px;
     display: block;
     }
@@ -12,7 +12,7 @@ body{
     float: right;
     }
 .socMed {
-    padding: 10px;
+    padding: 2%;
     display: inline-block;   
     }
 .socMed:hover {
