--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -166,6 +166,9 @@
       <h4 class="grey">Tags</h4>
   </div>
   <div class="whiteBox tagBox">
+        {% for post in page.posts %}
+        <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
+      {% endfor %}
         {% for category in site.categories %}
         <span><a href="{{site.baseurl}}/category/{{post.url}}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
