--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -46,6 +46,14 @@ layout: page
 {% endfor %}
 </div>
 
+
+<h2>{{ page.tag }}</h2>
+<ul>
+{% for post in page.posts %}
+  <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
+{% endfor %}
+</ul>
+
 <div>
 {% include footer.html %}
 </div>
