--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -166,11 +166,11 @@
       <h4 class="grey">Tags</h4>
   </div>
   <div class="whiteBox tagBox">
-        {% for post in page.posts %}
+        {% for post in site.categories[pageCategory] %}
         <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
       {% endfor %}
         {% for category in site.categories %}
-        <span><a href="{{site.baseurl}}/category/{{post.url}}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="{{site.baseurl}}{{ post.url }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
   </div>
 </div>
