--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -167,7 +167,7 @@
   </div>
   <div class="whiteBox tagBox">
         {% for post in site.categories[pageCategory] %}
-        <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
+        <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
       {% endfor %}
         {% for category in site.categories %}
         <span><a href="{{site.baseurl}}{{ post.url }}" target="_blank">{{ category  | first }}</a></span>
