--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -169,7 +169,7 @@
         {% for post in site.categories[pageCategory] %}
         <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
       {% endfor %}
-        {% for category in site.categories %}
+        {% for post in site.categories[pageCategory] %}
         <span><a href="{{site.baseurl}}{{ post.url }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
   </div>
