--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -23,7 +23,8 @@
     "urlTarget": "_blank" },
             { "id": "BA" },
             { "id": "BG" },
-            { "id": "CN" },
+            { "id": "CN", "{{site.baseurl}}/category/china.html",
+    "urlTarget": "_blank" },
             { "id": "HR" },
             { "id": "CZ" },
             { "id": "DE" },
@@ -40,13 +41,14 @@
             { "id": "PL" },
             { "id": "RO" },
             { "id": "RU",
-            "url": "{{site.baseurl}}/category/china.html",
+            "url": "{{site.baseurl}}/category/russia.html",
     "urlTarget": "_blank"
         },
             { "id": "RS" },
             { "id": "FR" },
             { "id": "RS" },
-            { "id": "US" },
+            { "id": "US", "{{site.baseurl}}/category/us.html",
+    "urlTarget": "_blank" },
             { "id": "SK" },
             { "id": "SI" },
             { "id": "ES" },
