--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -170,7 +170,7 @@
         <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
       {% endfor %}
         {% for category in site.categories %}
-        <span><a href="{{site.baseurl}}/category/{{post.url}}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="{{post.url}}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
   </div>
