--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -169,8 +169,9 @@
         {% for post in site.categories[pageCategory] %}
         <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
       {% endfor %}
+
         {% for category in site.categories %}
-        <span><a href="{{page.category.url}}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="{{url}}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
   </div>
