--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -171,7 +171,7 @@
       {% endfor %}
 
         {% for category in site.categories %}
-        <span><a href="{{url}}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="{{site.category.url}}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
   </div>
