--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -166,7 +166,7 @@
       <h4 class="grey">Tags</h4>
   </div>
   <div class="whiteBox tagBox">
-        {% for post in site.categories[pageCategory] %}
+        {% for post in site.categories %}
         <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
       {% endfor %}
 
