--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -22,7 +22,7 @@ layout: page
         <!-- end of Nav bar with social medias -->
     
         <div>
-            <h1>Why you shouldn't go to {{ page.category }}</h1>
+            <h1>Why you shouldn't go to {{ page.category.name }}</h1>
         </div>
 </div>
 
