--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -174,6 +174,13 @@
         <span><a href="{{ site.category[0] }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
+
+        <h2>{{ page.tag }}</h2>
+<ul>
+{% for post in page.posts %}
+  <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
+{% endfor %}
+</ul>
   </div>
 </div>
 <!-- End of tags -->
