--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -167,18 +167,18 @@
   </div>
   <div class="whiteBox tagBox">
         {% for post in site.categories %}
-        <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})
+        <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date  }} | Tags: {{ post | tags }})
       {% endfor %}
 
         {% for category in site.categories %}
-        <span><a href="{{ site.category[0] }}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="{{ site.category }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
 
         <h2>{{ page.tag }}</h2>
 <ul>
 {% for post in page.posts %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
+  <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date  }} | Tags: {{ post | tags }})</li>
 {% endfor %}
 </ul>
   </div>
