--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -40,7 +40,7 @@
             { "id": "PL" },
             { "id": "RO" },
             { "id": "RU",
-            "url": "{{site.baseurl}}/category/china.html",
+            "url": "{{site.baseurl}}/category/China.html",
     "urlTarget": "_blank"
         },
             { "id": "RS" },
