--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -12,11 +12,11 @@ layout: page
     <div>
         <!-- Nav bar with social medias -->
         <div class="navBar">
-            <a href="#" class="home socMed" >{% include icons/home.html %}</a>
-            <a href="#" class="socMed" >{% include icons/facebook.html %}</a>
-            <a href="#" class="socMed" >{% include icons/insta.html %}</a>
-            <a href="#" class="socMed" >{% include icons/twitter.html %}</a>
-            <a href="#" class="socMed" >{% include icons/linkedin.html %}</a>       
+                <a href="{{site.baseurl}}" class="home socMed" >{% include icons/home.html %}</a>      
+                <a href="https://www.facebook.com/mali.princ2" target="_blank" class="socMed" >{% include icons/facebook.html %}</a>
+                <a href="https://www.instagram.com/marljiva_marta/" target="_blank" class="socMed" >{% include icons/insta.html %}</a>
+                <a href="https://twitter.com/Marta_Guth" target="_blank" class="socMed" >{% include icons/twitter.html %}</a>
+                <a href="https://www.linkedin.com/feed/?trk=" target="_blank" class="socMed" >{% include icons/linkedin.html %}</a>      
         </div>
       </div>
         <!-- end of Nav bar with social medias -->
