--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -32,7 +32,7 @@ layout: page
 <div class="category-box">
         <div class="whiteBox smallCategBlog">
                 <a  href="{{site.baseurl}}{{ post.url }}">
-                    <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
+                    <img class="categ-img" src="{{site.baseurl}}{{ post.url }}" alt="beijing">
                     <div class="smallBlogText">{{ post.blog_title }}
                     <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
                 </a>
