--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -171,6 +171,10 @@
         <span><a href="{{ page.category }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
+        {% for tag in tags %}
+        <a href="#{{ tag | slugify }}"> {{ tag }} </a>
+    {% endfor %}
+
 </div>
 
   </div>
