--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -181,8 +181,8 @@
             {% else %}
               {% assign categories = page.categories %}
             {% endif %}
-            {% for category in categories %}
-            <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+            {% for category in page.category %}
+            <a href="{{site.baseurl}}/category/#{{category|slugize}}">{{category}}</a>
             {% unless forloop.last %}&nbsp;{% endunless %}
             {% endfor %}
           </div>
