--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -187,6 +187,10 @@
             {% endfor %}
           </div>
 
+          {% for tag in page.tags %}
+  <li><a href="{{ site.baseurl }}/{{ site.tag_page_dir }}/{{ tag | slugify }}.html">{{ tag }}</a></li>
+{% endfor %}
+
 </div>
 
   </div>
