--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -54,6 +54,18 @@ layout: page
 {% endfor %}
 </ul>
 
+<h2><%=t 'Posts tagged with', 'Posts mit dem Tag' %>: <%= page.tag %></h2>
+<ul>
+<% for post in page.posts -%>
+  <li>
+    <a href="<%=r post.url %>"><%= post.title %></a>
+    <span class="post-meta">
+      (<%=t 'Written by', 'Geschrieben von' %> <%= author(post) %> <%=t 'at', 'am' %> <%= date_to_long_string(post.date) %>)
+    </span>
+  </li>
+<% end -%>
+</ul>
+
 <div>
 {% include footer.html %}
 </div>
