--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -191,6 +191,9 @@
   <li><a href="{{ site.baseurl }}/{{ site.tag_page_dir }}/{{ tag | slugify }}.html">{{ tag }}</a></li>
 {% endfor %}
 
+<% if blog?(page.url) -%>
+<div id="tag-cloud"><%= tag_cloud(site) %></div>
+<% end -%>
 </div>
 
   </div>
