--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -168,7 +168,7 @@
   <div class="whiteBox tagBox">
         
         {% for category in site.categories %}
-        <span><a href="{{ page.category }}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="{{ page.categories.url }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
         {% for tag in tags %}
@@ -191,9 +191,6 @@
   <li><a href="{{ site.baseurl }}/{{ site.tag_page_dir }}/{{ tag | slugify }}.html">{{ tag }}</a></li>
 {% endfor %}
 
-<% if blog?(page.url) -%>
-<div id="tag-cloud"><%= tag_cloud(site) %></div>
-<% end -%>
 </div>
 
   </div>
