--- a/_includes/collecttags.html
+++ b/_includes/collecttags.html
@@ -1,20 +1,19 @@
 
-
-{% assign rawtags = "" %}
-{% for post in site.posts %}
-  {% assign ttags = post.tags | join:'|' | append:'|' %}
-  {% assign rawtags = rawtags | append:ttags %}
-{% endfor %}
-{% assign rawtags = rawtags | split:'|' | sort %}
-
-{% assign site.tags = "" %}
-{% for tag in rawtags %}
-  {% if tag != "" %}
-    {% if tags == "" %}
-      {% assign tags = tag | split:'|' %}
+<div class="post">
+  <h1 class="tag-title">Tag: {{ page.tag }}</h1>
+  <ul>
+  {% for post in site.tags[page.tag] %}
+    {% if post.lang %}
+    <li lang="{{post.lang}}">
+    {% else %}
+    <li>
     {% endif %}
-    {% unless tags contains tag %}
-      {% assign tags = tags | join:'|' | append:'|' | append:tag | split:'|' %}
-    {% endunless %}
-  {% endif %}
-{% endfor %}
+      <a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }})<br>
+      {{ post.description }}
+      <!-- Tags: {{ post.tags | join: ", " }} -->
+    </li>
+  {% endfor %}
+  </ul>
+  </div>
+  
+  <hr>
