--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -168,11 +168,11 @@
   <div class="whiteBox tagBox">
         
         {% for category in site.categories %}
-        <span><a href="#{{ category  | slugify}}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="#{{ page.categories | slugify}}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
         {% for tag in tags %}
-        <a href="#{{ tag | slugify }}" target="_blank"> {{ tag }} </a>
+        <a href="#{{ tag | slugify }}"> {{ tag }} </a>
     {% endfor %}
 
     <div class="post-categories">
@@ -191,9 +191,7 @@
   {% include collecttags.html %}
 {% endif %}
 
-{% if site.tags == "" %}
-    {% include collecttags.html %}
-  {% endif %}
+
 
           {% for tag in page.tags %}
   <li><a href="{{ site.baseurl }}/{{ site.tag_page_dir }}/{{ tag | slugify }}.html">{{ tag }}</a></li>
