--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -168,7 +168,7 @@
   <div class="whiteBox tagBox">
         
         {% for category in site.categories %}
-        <span><a href="#{{ category.tag }}" target="_blank">{{ category  | first }}</a></span>
+        <span><a href="#{{ category.tags }}" target="_blank">{{ category  | first }}</a></span>
         {% endfor %}
 
         {% for tag in tags %}
