--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -172,7 +172,7 @@
         {% endfor %}
 
         {% for tag in tags %}
-        <a href="#{{ tag | slugify }}"> {{ tag }} </a>
+        <a href="#tag/{{ tag | slugify }}"> {{ tag }} </a>
     {% endfor %}
 
     <div class="post-categories">
