--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -172,30 +172,8 @@
         {% endfor %}
 
         {% for tag in tags %}
-        <a href="tag/{{ tag | slugify }}"> {{ tag }} </a>
+        <a href="tag/{{ tag | slugify }}"> {{ tag.title }} </a>
     {% endfor %}
-
-    <div class="post-categories">
-            {% if post %}
-              {% assign categories = post.categories %}
-            {% else %}
-              {% assign categories = page.categories %}
-            {% endif %}
-            {% for category in page.category %}
-            <a href="{{site.baseurl}}/category/#{{category|slugize}}">{{category}}</a>
-            {% unless forloop.last %}&nbsp;{% endunless %}
-            {% endfor %}
-          </div>
-
-          {% if site.tags != "" %}
-  {% include collecttags.html %}
-{% endif %}
-
-
-
-          {% for tag in page.tags %}
-  <li><a href="{{ site.baseurl }}/{{ site.tag_page_dir }}/{{ tag | slugify }}.html">{{ tag }}</a></li>
-{% endfor %}
 
 </div>
 
