--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -172,7 +172,7 @@
         {% endfor %}
 
         {% for tag in tags %}
-        <a href="tag/{{ tag | slugify }}" target="_blank"> {{ tag.title }} </a>
+        <a href="tag/{{ tag | slugify }}" target="_blank"> {{ tag.name }} </a>
     {% endfor %}
 
 </div>
