--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -22,7 +22,7 @@ layout: default
         <!-- end of Nav bar with social medias -->
     
         <div>
-            <h1>Why you shouldn't go to {{ post.blog_title }}</h1>
+            <h1>Why you shouldn't go to {{ page.tag }}</h1>
         </div>
 </div>
 
