--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -28,7 +28,7 @@ layout: default
 
 
 <div class="flex-container table">
-{% for post in page.category %}
+{% for post in page.tag %}
 <div class="category-box">
         <div class="whiteBox smallCategBlog">
                 <a  href="{{ post.url }}">
