--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -168,7 +168,7 @@
   <div class="whiteBox tagBox">
         
         {% for tag in tags %}
-        <a href="tag/{{ tag | slugify }}" target="_blank"> {{ tag.title }} </a>
+        <a href="tag/{{ tag | slugify }}" target="_blank"> {{ title }} </a>
     {% endfor %}
 
 </div>
