--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <a href="https://www.instagram.com/marljiva_marta/" target="_blank" class="socMed" >{% include icons/insta.html %}</a>
         <a href="https://twitter.com/Marta_Guth" target="_blank" class="socMed" >{% include icons/twitter.html %}</a>
         <a href="https://www.linkedin.com/feed/?trk=" class="socMed" >{% include icons/linkedin.html %}</a>
-        <a href="searchAll.html" target="_blank" class="searchRight socMed"><i>{% include icons/search.html %}</i></a>       
+        <a href="..searchAll.html" target="_blank" class="searchRight socMed"><i>{% include icons/search.html %}</i></a>       
     </div>
     <!-- end of Nav bar with social medias -->
 
