--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style src="js/post.js"></style>
+<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
+<base href="{{ site.baseurl }}">
 </head>
 <body>
 
