--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,10 @@
+<head>
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"18a1deab68d88323607912764","lid":"dbaea1689b"}) })</script>
+{% if site.google_analytics %}
+  {% include google-analytics.html %}
+{% endif %}
+</head>
+
 <div>
     <!-- Nav bar with social medias -->
     <div class="navBar"> 
@@ -17,10 +23,6 @@
 {% if site.tags == "" %}
     {% include collecttags.html %}
   {% endif %}
-
-  {% if site.google_analytics %}
-  {% include google-analytics.html %}
-{% endif %}
 
     <!-- Content div -->
      <div> 
