--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -68,9 +68,9 @@ search.start();
 
 
 const search = instantsearch({
-  appId: '{{ site.algolia.application_id }}',
-  apiKey: '{{ site.algolia.search_only_api_key }}',
-  indexName: '{{ site.algolia.index_name }}'
+  appId: 'FL9GO11HZ6',
+  apiKey: '3e7d65dbef7e7a30e38f11111b6a2dc5',
+  indexName: 'Depressed_traveller'
 });
 
 const hitTemplate = function(hit) {
