--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -70,7 +70,8 @@ search.start();
 const search = instantsearch({
   appId: 'FL9GO11HZ6',
   apiKey: '3e7d65dbef7e7a30e38f11111b6a2dc5',
-  indexName: 'Depressed_traveller'
+  indexName: 'Depressed_traveller',
+  routing: true
 });
 
 const hitTemplate = function(hit) {
