--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,10 @@ layout: default
     <h1 class="page-heading">Posts</h1>
 
     <div id="search-searchbar"></div>
+
+    <div id="search-box">
+            <!-- SearchBox widget will appear here -->
+          </div>
   
     <div class="post-list" id="search-hits">
       {% for post in site.posts %}
