--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -1,8 +1,8 @@
 
-<script src="{{site.baseurl}}https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-<link rel="stylesheet" type="text/css" href="{{site.baseurl}}https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
-<link rel="stylesheet" type="text/css" href="{{site.baseurl}}https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
 <base href="{{ site.baseurl }}">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4/dist/instantsearch.min.css">
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4"></script>
@@ -71,7 +71,6 @@ const search = instantsearch({
   appId: 'FL9GO11HZ6',
   apiKey: '3e7d65dbef7e7a30e38f11111b6a2dc5',
   indexName: 'Depressed_traveller',
-  routing: true
 });
 
 const hitTemplate = function(hit) {
