--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -146,7 +146,7 @@ a {
     text-align: center;
     margin: auto;
 }
-.tagBox > span {
+.tagBox > a {
    background-color: rgba(246, 219, 164,0.2);
    padding: 5px;
    margin: 5px;
