--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -23,7 +23,9 @@
     "urlTarget": "_blank" },
             { "id": "BA" },
             { "id": "BG" },
-            { "id": "CN" },
+            { "id": "CN", 
+            "url": "{{site.baseurl}}/category/china",
+    "urlTarget": "_blank"},
             { "id": "HR" },
             { "id": "CZ" },
             { "id": "DE" },
@@ -35,17 +37,20 @@
             { "id": "MK" },
             { "id": "MC" },
             { "id": "ME" },
-            { "id": "MA" },
+            { "id": "MA", 
+            "url": "{{site.baseurl}}/category/morocco",
+    "urlTarget": "_blank" },
             { "id": "NL" },
             { "id": "PL" },
             { "id": "RO" },
             { "id": "RU",
-            "url": "{{site.baseurl}}/category/china",
+            "url": "{{site.baseurl}}/category/russia",
     "urlTarget": "_blank"
         },
-            { "id": "RS" },
+            { "id": "RS",
+            "url": "{{site.baseurl}}/category/",
+    "urlTarget": "_blank" },
             { "id": "FR" },
-            { "id": "RS" },
             { "id": "US" },
             { "id": "SK" },
             { "id": "SI" },
