--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -152,7 +152,7 @@ a {
    margin: 5px;
    display: inline-block;
 }
-.tagBox > span:hover{
+.tagBox > a:hover{
     background-color: rgba(246, 219, 164,0.6);
 }
 .socMedTwo {
