--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -218,6 +218,13 @@ a {
 label {
     display: block;
 }
+blockquote {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
+}
 }
 
 
