--- a/_includes/icons/home.html
+++ b/_includes/icons/home.html
@@ -21,4 +21,12 @@
     
         
     }
+
+    @media  (min-width : 320px) and (max-width : 480px) {
+        svg{   
+                width: 4vw;
+                height: 4vw;
+        }
+    }
+        
     </style>
