--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -196,6 +196,13 @@ a {
     .blogEntry{
         flex: 1 1 100%
     }
+    blockquote {
+        display: block;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        margin-inline-start: 10px;
+        margin-inline-end: 10px;
+    }
 }
 @media (max-width: 300px){
     .bigger, .smaller {   
