--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -233,6 +233,10 @@ blockquote {
     margin-inline-start: 10px;
     margin-inline-end: 10px;
 }
+.white-box{
+    padding:0px;
+    margin:0px;
+}
 }
 
 
