--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -198,8 +198,12 @@ a {
         display: block;
         margin-block-start: 1em;
         margin-block-end: 1em;
-        margin-inline-start: 10px;
-        margin-inline-end: 10px;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+    }
+    .white-box{
+        padding:0px;
+        margin:0px;
     }
 }
 @media (max-width: 300px){
