--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,11 @@
     <script src="ammap/ammap.js" type="text/javascript"></script>
     <link rel="stylesheet" href="ammap/ammap.css" type="text/css" media="all" />
     <script src="ammap/maps/js/worldLow.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/instantsearch.js/dist/instantsearch.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js/dist/instantsearch.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js/dist/instantsearch-theme-algolia.min.css">
+<base href="{{ site.baseurl }}">
   </head>
   <body>
     {{ content }}
