--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,5 +27,7 @@
       js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.12';
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+
+{% include algolia.html %}
   </body>
 </html>
