--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -13,7 +13,8 @@ body{
     }
 .socMed {
     padding: 4%;
-    display: inline-block;   
+    display: inline-block;
+    margin: 2%;   
     }
 .socMed:hover {
     background-color: #f6f5f3;
